Fix: inscription avec Brevo

--- a/.env.dist
+++ b/.env.dist
@@ -31,6 +31,8 @@ MJ_CONTACT_FORM_USER_CONFIRMED_TEMPLATE_ID=''
 MJ_COMPOSTRI_NEWSLETTER_CONTACT_LIST_ID=''
 MAILJET_FROM_EMAIL=''
 MAILJET_FROM_NAME=''
+BREVO_API_KEY=''
+BREVO_COMPOSTEURS_FOLDER=''
 
 ### MJML
 MJML_PUBLIC_KEY=''
