--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
         "doctrine/orm": "^2.6",
         "fresh/doctrine-enum-bundle": "^6.5",
         "gesdinet/jwt-refresh-token-bundle": "^0.10.1",
+        "getbrevo/brevo-php": "^1.0",
         "intervention/image": "^2.5",
         "knplabs/knp-markdown-bundle": "^1.8",
         "lexik/jwt-authentication-bundle": "^2.6",
-        "mailjet/mailjet-apiv3-php": "^1.4",
         "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "*",
